[gd_scene load_steps=20 format=3 uid="uid://dfmsbbxxx5ipp"]

[ext_resource type="Script" uid="uid://c7p7s17kgxj7i" path="res://HUD/hud.gd" id="1_f31rt"]
[ext_resource type="FontFile" uid="uid://tmneylivnrbi" path="res://HUD/Fonts/LeagueofOrbitron/Orbitron Medium.ttf" id="1_fwgky"]
[ext_resource type="Texture2D" uid="uid://cpurtqhp7dqo1" path="res://HUD/crosshair.png" id="2_b7ubu"]
[ext_resource type="Texture2D" uid="uid://cj3kvdfv26shm" path="res://HUD/run.png" id="3_amwvk"]
[ext_resource type="Texture2D" uid="uid://bdxygwc00dj61" path="res://HUD/walk.png" id="4_aa5tu"]
[ext_resource type="FontFile" uid="uid://b6a6qryn3cooq" path="res://HUD/Blank River.ttf" id="5_aa5tu"]
[ext_resource type="Theme" uid="uid://bh820g1g3rqgr" path="res://HUD/HUD-Scribble.tres" id="6_njmlf"]
[ext_resource type="Texture2D" uid="uid://diic4i373h5fn" path="res://Graphics/Portraits/Sonic.png" id="7_lkt0t"]
[ext_resource type="AudioStream" uid="uid://bj1fim1aogb7h" path="res://Audio/FX/Pause.wav" id="8_6i5cd"]
[ext_resource type="Shader" uid="uid://cnwrync841tgg" path="res://Graphics/Shaders/chromaticAbb.gdshader" id="8_pd2p5"]
[ext_resource type="Texture2D" uid="uid://bdm7wuevdarnx" path="res://Graphics/icon.png" id="8_t1yhm"]

[sub_resource type="SystemFont" id="SystemFont_pd2p5"]
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwgky"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 0, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7odlb"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.635294, 0, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huo54"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 0, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true

[sub_resource type="Theme" id="Theme_pd2p5"]
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/constants/h_separation = 8
Button/font_sizes/font_size = 16
Button/fonts/font = SubResource("SystemFont_pd2p5")
Button/styles/hover = SubResource("StyleBoxFlat_fwgky")
Button/styles/normal = SubResource("StyleBoxFlat_7odlb")
Button/styles/pressed = SubResource("StyleBoxFlat_huo54")
Label/colors/font_color = Color(0, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 8
Label/font_sizes/font_size = 36
Label/fonts/font = ExtResource("1_fwgky")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pd2p5"]
shader = ExtResource("8_pd2p5")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="Theme" id="Theme_lkt0t"]
default_font = ExtResource("5_aa5tu")
default_font_size = 92
Button/fonts/font = ExtResource("5_aa5tu")
Label/font_sizes/font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pd2p5"]
bg_color = Color(1, 1, 1, 0.4)

[node name="Hud" type="CanvasLayer" groups=["HUD"]]
process_mode = 3

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_pd2p5")
script = ExtResource("1_f31rt")

[node name="PrimaryPanel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 952.0
offset_bottom = 48.0

[node name="LivesLabel" type="Label" parent="Control/PrimaryPanel"]
layout_mode = 0
offset_left = 19.0
offset_top = 8.0
offset_right = 178.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
text = "Lives: 0"

[node name="RingsLabel" type="Label" parent="Control/PrimaryPanel"]
layout_mode = 0
offset_left = 208.0
offset_top = 8.0
offset_right = 368.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
text = "Rings: 0"

[node name="BoostLabel" type="Label" parent="Control/PrimaryPanel"]
layout_mode = 0
offset_left = 408.0
offset_top = 8.0
offset_right = 574.0
offset_bottom = 52.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
text = "Boost: 0"

[node name="AbbOverlay" type="ColorRect" parent="Control"]
visible = false
z_index = 6
material = SubResource("ShaderMaterial_pd2p5")
layout_mode = 0
offset_left = -88.0
offset_top = -80.0
offset_right = 1248.0
offset_bottom = 704.0
color = Color(0, 0, 0, 0.623529)

[node name="Crosshair" type="Sprite2D" parent="Control"]
position = Vector2(576, 320)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_b7ubu")

[node name="Run" type="Sprite2D" parent="Control"]
position = Vector2(1104, 592)
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_amwvk")

[node name="Walk" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(1104, 592)
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_aa5tu")

[node name="LocationLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 960.0
offset_right = 1160.0
offset_bottom = 48.0
theme = ExtResource("6_njmlf")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/normal_font_size = 16
text = "Station Square"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseScreen" type="Node2D" parent="Control"]
unique_name_in_owner = true
process_mode = 2
visible = false
z_index = 4096

[node name="ScreenBG" type="ColorRect" parent="Control/PauseScreen"]
offset_left = -88.0
offset_top = -80.0
offset_right = 1248.0
offset_bottom = 704.0
color = Color(0, 0, 0, 0.623529)

[node name="CharPortrait" type="TextureRect" parent="Control/PauseScreen"]
offset_left = 792.0
offset_top = 264.0
offset_right = 2436.0
offset_bottom = 1899.0
rotation = 0.0816368
scale = Vector2(0.364891, 0.364891)
texture = ExtResource("7_lkt0t")

[node name="PauseLabel" type="RichTextLabel" parent="Control/PauseScreen"]
offset_left = 248.0
offset_top = 48.0
offset_right = 1152.0
offset_bottom = 169.0
scale = Vector2(1, 0.983194)
theme = SubResource("Theme_lkt0t")
text = "Paused"
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="Control/PauseScreen"]
offset_left = 40.0
offset_top = 450.0
offset_right = 110.0
offset_bottom = 481.0
size_flags_horizontal = 0
text = "Quit"

[node name="ResumeButton" type="Button" parent="Control/PauseScreen"]
offset_left = 40.0
offset_top = 400.0
offset_right = 110.0
offset_bottom = 431.0
size_flags_horizontal = 0
text = "Resume"

[node name="LoadButton" type="Button" parent="Control/PauseScreen"]
offset_left = 40.0
offset_top = 350.0
offset_right = 112.0
offset_bottom = 381.0
text = "Load"

[node name="SaveButton" type="Button" parent="Control/PauseScreen"]
offset_left = 40.0
offset_top = 300.0
offset_right = 110.0
offset_bottom = 331.0
size_flags_horizontal = 0
text = "Save"

[node name="TextureRect" type="TextureRect" parent="Control/PauseScreen"]
offset_left = 16.0
offset_top = 16.0
offset_right = 774.0
offset_bottom = 774.0
scale = Vector2(0.293477, 0.293477)
texture = ExtResource("8_t1yhm")

[node name="SaveFilePanel" type="Panel" parent="Control/PauseScreen" groups=["SaveNameInput"]]
visible = false
offset_left = 168.0
offset_top = 280.0
offset_right = 584.0
offset_bottom = 352.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pd2p5")

[node name="NameInput" type="LineEdit" parent="Control/PauseScreen/SaveFilePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 264.0
offset_bottom = 64.0
placeholder_text = "Enter Your Name"

[node name="Label" type="Label" parent="Control/PauseScreen/SaveFilePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 102.0
offset_bottom = 31.0
text = "Save File As:"

[node name="SaveNameButton" type="Button" parent="Control/PauseScreen/SaveFilePanel"]
layout_mode = 0
offset_left = 320.0
offset_top = 32.0
offset_right = 364.0
offset_bottom = 63.0
text = "Save"

[node name="LoadFilePanel" type="Panel" parent="Control/PauseScreen"]
visible = false
offset_left = 208.0
offset_top = 240.0
offset_right = 576.0
offset_bottom = 512.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pd2p5")

[node name="SavesList" type="ItemList" parent="Control/PauseScreen/LoadFilePanel" groups=["SaveList"]]
layout_mode = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 328.0
offset_bottom = 216.0

[node name="SavesListLabel" type="Label" parent="Control/PauseScreen/LoadFilePanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 85.0
offset_bottom = 31.0
text = "Load File"

[node name="LoadFileButton" type="Button" parent="Control/PauseScreen/LoadFilePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 232.0
offset_right = 109.0
offset_bottom = 263.0
text = "Load File"

[node name="DeleteFileButton" type="Button" parent="Control/PauseScreen/LoadFilePanel"]
layout_mode = 0
offset_left = 240.0
offset_top = 232.0
offset_right = 329.0
offset_bottom = 263.0
disabled = true
text = "Delete File"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 536.0
offset_right = 248.0
offset_bottom = 640.0
scale = Vector2(0.758525, 0.758525)

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 16.0
offset_right = 136.0
offset_bottom = 48.0
text = "State:"

[node name="StateLabel" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_top = 56.0
offset_right = 195.0
offset_bottom = 100.0
text = "<STATE>"

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6i5cd")
volume_db = -7.656

[connection signal="pressed" from="Control/PauseScreen/QuitButton" to="Control" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/PauseScreen/ResumeButton" to="Control" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/PauseScreen/LoadButton" to="Control" method="_on_load_button_pressed"]
[connection signal="pressed" from="Control/PauseScreen/SaveButton" to="Control" method="_on_save_button_pressed"]
[connection signal="pressed" from="Control/PauseScreen/SaveFilePanel/SaveNameButton" to="Control" method="_on_save_name_button_pressed"]
[connection signal="pressed" from="Control/PauseScreen/LoadFilePanel/LoadFileButton" to="Control" method="_on_load_file_button_pressed"]
